# course_work_4

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py  urls.py
mailings/: admin.py  forms.py  models.py  urls.py  views.py
mailings/fixtures/: mailings.json
mailings/management/commands/: load_mailings.py  send_mailing.py  start_scheduler.py
mailings/migrations/: 0001_initial.py  0002_alter_message_options.py  0003_mailing_owner_message_owner_recipient_owner.py  0004_attemptmailing_owner.py  0005_alter_mailing_options.py
src/: scheduler.py  utils.py
templates/mailings/: attempt_mailing_list.html  base.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  personal_statistic.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
templates/mailings/tools/: flexbox_styles.html  navbar.html
templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  user_detail.html  user_form.html  user_list.html
users/: forms.py  models.py  urls.py  views.py
users/fixtures/: groups_and_permissions.json  users.json
users/management/commands/: create_superuser.py  load_users_groups_and_permissions.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templatetags/: my_tags.py
