[tool.poetry]
name = "alyautdinov-ruslan-cw4"
version = "0.1.0"
description = ""
authors = ["Аляутдинов Руслан <rusalyautdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
django = "^5.1.4"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
ipython = "^8.30.0"
redis = "^5.2.1"
apscheduler = "^3.11.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119

[tool.isort]
line_length = 119